--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
     "version": 2,
-    "public": "dist",
     "builds": [
       {
         "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
+        "use": "@vercel/static-build"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
       }
     ]
   }
