--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "postinstall": "chmod +x node_modules/.bin/vite"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "postcss": "^8.4.39",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +22,8 @@
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
