--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "daisyui": "^4.12.10",
     "postcss": "^8.4.39",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
